syntax = "proto3";

package controller.api.resources.hostcatalogs.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/hostcatalogs;hostcatalogs";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

// HostCatalog manages Hosts and HostSets
message HostCatalog {
	// The ID of the host
	// Output only.
	string id = 10;

	// The id of the scope this resource belongs to.
	string scope_id = 20 [json_name="scope_id"];

	// Scope information for this resource
	// Output only.
	resources.scopes.v1.ScopeInfo scope = 30;

	// Optional name for identification purposes
	google.protobuf.StringValue name = 40 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"name" that: "name"}];

	// Optional user-set description for identification purposes
	google.protobuf.StringValue description = 50 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"description" that: "description"}];

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 60 [json_name="created_time"];

	// The time this resource was last updated
	// Output only.
	google.protobuf.Timestamp updated_time = 70 [json_name="updated_time"];

	// The version can be used in subsequent write requests to ensure this resource
	// has not changed and to fail the write if it has.
	uint32 version = 80;

	// The type of the resource, to help differentiate schemas
	string type = 90;

	// Attributes specific to the catalog type
	google.protobuf.Struct attributes = 100 [(custom_options.v1.generate_sdk_option) = true];
}
